--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -39,7 +39,7 @@
                             </constraints>
                         </view>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
-                            <rect key="frame" x="98" y="14" width="487" height="17"/>
+                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -48,6 +48,8 @@
                         <constraint firstAttribute="trailing" secondItem="Usu-Bl-zdT" secondAttribute="trailing" constant="15" id="1QC-bd-cR9"/>
                         <constraint firstItem="Usu-Bl-zdT" firstAttribute="top" secondItem="Hv4-mD-grc" secondAttribute="top" constant="30" id="43a-4U-fRu"/>
                         <constraint firstItem="e91-cy-sXd" firstAttribute="leading" secondItem="q2c-qI-JfY" secondAttribute="trailing" constant="15" id="9cP-Lx-aP2"/>
+                        <constraint firstItem="Usu-Bl-zdT" firstAttribute="top" secondItem="e91-cy-sXd" secondAttribute="bottom" id="DCi-LE-M16"/>
+                        <constraint firstItem="e91-cy-sXd" firstAttribute="top" secondItem="Hv4-mD-grc" secondAttribute="top" id="YQ7-uK-J2I"/>
                         <constraint firstAttribute="height" constant="45" id="bXh-Az-97c"/>
                         <constraint firstAttribute="centerY" secondItem="q2c-qI-JfY" secondAttribute="centerY" id="fj6-WB-WBT"/>
                         <constraint firstAttribute="centerY" secondItem="e91-cy-sXd" secondAttribute="centerY" id="jiA-yF-9wA"/>
@@ -59,6 +61,7 @@
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="43a-4U-fRu"/>
+                            <exclude reference="jiA-yF-9wA"/>
                         </mask>
                     </variation>
                 </view>
@@ -81,8 +84,8 @@
                                 <constraint firstAttribute="height" constant="1" id="GhV-QN-u84"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
-                            <rect key="frame" x="98" y="13" width="472" height="17"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
+                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -94,9 +97,11 @@
                         <constraint firstAttribute="trailing" secondItem="Mo3-z1-vUp" secondAttribute="trailing" constant="15" id="Ltd-8z-yLg"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="RL6-1W-tyt"/>
                         <constraint firstItem="Mo3-z1-vUp" firstAttribute="top" secondItem="DgB-ib-5cK" secondAttribute="top" constant="35" id="V3c-l6-1Pm"/>
+                        <constraint firstItem="Mo3-z1-vUp" firstAttribute="top" secondItem="9OA-r7-ajU" secondAttribute="bottom" id="ZMQ-rh-CvS"/>
                         <constraint firstAttribute="centerY" secondItem="9OA-r7-ajU" secondAttribute="centerY" id="dLW-7X-30J"/>
                         <constraint firstAttribute="centerY" secondItem="fEF-Eq-lIZ" secondAttribute="centerY" id="dz3-8G-2Ek"/>
                         <constraint firstItem="9OA-r7-ajU" firstAttribute="leading" secondItem="fEF-Eq-lIZ" secondAttribute="trailing" constant="15" id="oyb-Ry-k6M"/>
+                        <constraint firstItem="9OA-r7-ajU" firstAttribute="top" secondItem="DgB-ib-5cK" secondAttribute="top" id="rnn-2s-N12"/>
                         <constraint firstItem="fEF-Eq-lIZ" firstAttribute="leading" secondItem="DgB-ib-5cK" secondAttribute="leading" constant="15" id="tWy-Zz-IXz"/>
                         <constraint firstAttribute="height" constant="45" id="ww1-7y-kzP"/>
                     </constraints>
@@ -104,6 +109,7 @@
                         <mask key="constraints">
                             <exclude reference="RL6-1W-tyt"/>
                             <exclude reference="V3c-l6-1Pm"/>
+                            <exclude reference="dLW-7X-30J"/>
                         </mask>
                     </variation>
                 </view>
@@ -126,8 +132,8 @@
                                 <constraint firstAttribute="height" constant="1" id="Nrk-Mr-Y8O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
-                            <rect key="frame" x="98" y="13" width="472" height="17"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
+                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -142,20 +148,23 @@
                         <constraint firstItem="fci-Fr-N45" firstAttribute="leading" secondItem="ilD-no-neh" secondAttribute="trailing" constant="15" id="P2N-Pw-odh"/>
                         <constraint firstItem="ilD-no-neh" firstAttribute="leading" secondItem="piu-gV-EzG" secondAttribute="leading" constant="15" id="b7q-4a-xP4"/>
                         <constraint firstItem="O7s-6s-g1F" firstAttribute="top" secondItem="piu-gV-EzG" secondAttribute="top" constant="35" id="fP2-IJ-ieM"/>
+                        <constraint firstItem="O7s-6s-g1F" firstAttribute="top" secondItem="fci-Fr-N45" secondAttribute="bottom" id="g1s-Gp-uaI"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="h25-uh-FHS"/>
                         <constraint firstItem="O7s-6s-g1F" firstAttribute="leading" secondItem="ilD-no-neh" secondAttribute="trailing" id="iUr-Uu-YlP"/>
                         <constraint firstItem="ilD-no-neh" firstAttribute="bottom" secondItem="O7s-6s-g1F" secondAttribute="top" constant="-8" id="voh-Al-S08"/>
+                        <constraint firstItem="fci-Fr-N45" firstAttribute="top" secondItem="piu-gV-EzG" secondAttribute="top" id="yhv-pa-JZN"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="1qM-FB-Jxi"/>
                             <exclude reference="h25-uh-FHS"/>
                             <exclude reference="fP2-IJ-ieM"/>
+                            <exclude reference="BsT-Xc-RaI"/>
                         </mask>
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJY-Ex-sYU" customClass="JxbScaleButton">
-                    <rect key="frame" x="515" y="92.5" width="70" height="30"/>
+                    <rect key="frame" x="515" y="92" width="70" height="30"/>
                     <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="JiP-TB-Rdp"/>
