--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZLoginController">
@@ -52,13 +52,13 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7MT-mx-awa" userLabel="yonghu">
-                    <rect key="frame" x="30" y="268" width="540" height="40"/>
+                    <rect key="frame" x="30" y="240" width="540" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dl_biankuang" translatesAutoresizingMaskIntoConstraints="NO" id="s10-kk-Yv8">
                             <rect key="frame" x="0.0" y="0.0" width="540" height="40"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6U1-v0-f9g">
-                            <rect key="frame" x="46" y="9" width="39" height="21"/>
+                            <rect key="frame" x="46" y="9" width="39" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
@@ -71,7 +71,7 @@
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YNQ-Hl-rLD">
-                            <rect key="frame" x="98" y="12" width="429" height="17"/>
+                            <rect key="frame" x="98" y="0.0" width="429" height="40"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -82,23 +82,30 @@
                         <constraint firstItem="6U1-v0-f9g" firstAttribute="leading" secondItem="egd-XG-wcJ" secondAttribute="trailing" constant="13" id="LZX-96-2qS"/>
                         <constraint firstItem="s10-kk-Yv8" firstAttribute="top" secondItem="7MT-mx-awa" secondAttribute="top" id="N5i-oe-hsI"/>
                         <constraint firstAttribute="centerY" secondItem="egd-XG-wcJ" secondAttribute="centerY" id="PBZ-9M-Chb"/>
+                        <constraint firstAttribute="bottom" secondItem="YNQ-Hl-rLD" secondAttribute="bottom" id="PUf-Tw-4oi"/>
                         <constraint firstAttribute="centerY" secondItem="YNQ-Hl-rLD" secondAttribute="centerY" id="Px9-6N-sFw"/>
                         <constraint firstAttribute="centerY" secondItem="6U1-v0-f9g" secondAttribute="centerY" id="YnA-tC-Cm1"/>
                         <constraint firstAttribute="trailing" secondItem="s10-kk-Yv8" secondAttribute="trailing" id="Z3k-eG-16f"/>
                         <constraint firstAttribute="trailing" secondItem="YNQ-Hl-rLD" secondAttribute="trailing" constant="13" id="ZCS-Z1-Ukz"/>
                         <constraint firstItem="egd-XG-wcJ" firstAttribute="leading" secondItem="7MT-mx-awa" secondAttribute="leading" constant="13" id="d6f-MJ-ZcK"/>
+                        <constraint firstItem="YNQ-Hl-rLD" firstAttribute="top" secondItem="7MT-mx-awa" secondAttribute="top" id="kPV-tu-eKn"/>
                         <constraint firstAttribute="bottom" secondItem="s10-kk-Yv8" secondAttribute="bottom" id="oWL-ki-8Hi"/>
                         <constraint firstItem="s10-kk-Yv8" firstAttribute="leading" secondItem="7MT-mx-awa" secondAttribute="leading" id="rbe-sj-JsU"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Px9-6N-sFw"/>
+                        </mask>
+                    </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TD8-qq-8p8" userLabel="mima">
-                    <rect key="frame" x="30" y="324" width="540" height="40"/>
+                    <rect key="frame" x="30" y="296" width="540" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dl_biankuang" translatesAutoresizingMaskIntoConstraints="NO" id="ydU-Tf-ABg">
                             <rect key="frame" x="0.0" y="0.0" width="540" height="40"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEm-pC-yr8">
-                            <rect key="frame" x="46" y="10" width="39" height="21"/>
+                            <rect key="frame" x="46" y="10" width="39" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
@@ -111,7 +118,7 @@
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="1xb-UU-DCY">
-                            <rect key="frame" x="98" y="10" width="421" height="19"/>
+                            <rect key="frame" x="98" y="0.0" width="421" height="40"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
@@ -138,15 +145,22 @@
                         <constraint firstAttribute="centerY" secondItem="2Qj-sU-NAv" secondAttribute="centerY" id="QSJ-Ac-zO1"/>
                         <constraint firstAttribute="trailing" secondItem="ydU-Tf-ABg" secondAttribute="trailing" id="RnF-hh-Hnz"/>
                         <constraint firstAttribute="trailing" secondItem="1xb-UU-DCY" secondAttribute="trailing" constant="21" id="RvQ-fF-GnI"/>
+                        <constraint firstItem="1xb-UU-DCY" firstAttribute="top" secondItem="TD8-qq-8p8" secondAttribute="top" id="aFM-Pc-zvZ"/>
                         <constraint firstAttribute="height" constant="40" id="bxa-IF-OHD"/>
                         <constraint firstItem="2Qj-sU-NAv" firstAttribute="leading" secondItem="TD8-qq-8p8" secondAttribute="leading" constant="13" id="e3b-Mr-J8P"/>
+                        <constraint firstAttribute="bottom" secondItem="1xb-UU-DCY" secondAttribute="bottom" id="fAq-v2-B21"/>
                         <constraint firstItem="1xb-UU-DCY" firstAttribute="centerY" secondItem="FhZ-nY-OYw" secondAttribute="centerY" id="hcB-dT-X0z"/>
                         <constraint firstAttribute="trailing" secondItem="FhZ-nY-OYw" secondAttribute="trailing" constant="1" id="wZW-j7-7up"/>
                         <constraint firstItem="ydU-Tf-ABg" firstAttribute="leading" secondItem="TD8-qq-8p8" secondAttribute="leading" id="ylu-Fj-fOP"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="NPB-4v-5mY"/>
+                        </mask>
+                    </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fPT-rU-Wbj">
-                    <rect key="frame" x="30" y="427" width="540" height="43"/>
+                    <rect key="frame" x="30" y="386" width="540" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="AO4-Yg-sO2"/>
                     </constraints>
@@ -158,14 +172,14 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrO-Zc-51X">
-                    <rect key="frame" x="30" y="488" width="60" height="30"/>
+                    <rect key="frame" x="30" y="447" width="60" height="30"/>
                     <state key="normal" title="找回密码"/>
                     <connections>
                         <action selector="findPassWord:" destination="-1" eventType="touchUpInside" id="VpV-Oq-cdA"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZyF-Zt-ZMl">
-                    <rect key="frame" x="510" y="488" width="60" height="30"/>
+                    <rect key="frame" x="510" y="447" width="60" height="30"/>
                     <state key="normal" title="立刻注册">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -173,6 +187,44 @@
                         <action selector="registerAccount:" destination="-1" eventType="touchUpInside" id="Xdj-yA-aVI"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5eZ-q8-iqJ" userLabel="记住密码">
+                    <rect key="frame" x="30" y="346" width="130" height="31"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9k-IJ-KOK">
+                            <rect key="frame" x="0.0" y="2" width="70" height="27"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gro-ln-cDY">
+                            <rect key="frame" x="73" y="0.0" width="51" height="31"/>
+                        </switch>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="130" id="8mF-ze-eST"/>
+                        <constraint firstAttribute="height" constant="31" id="COO-W7-Yne"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qfr-ry-XHC" userLabel="记住密码">
+                    <rect key="frame" x="440" y="346" width="130" height="31"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHR-JJ-OE1">
+                            <rect key="frame" x="0.0" y="2" width="70" height="27"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mca-AX-N5U">
+                            <rect key="frame" x="73" y="0.0" width="51" height="31"/>
+                        </switch>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="130" id="80S-cK-vjw"/>
+                        <constraint firstAttribute="height" constant="31" id="g1j-B2-HJf"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -181,16 +233,20 @@
                 <constraint firstAttribute="trailing" secondItem="7MT-mx-awa" secondAttribute="trailing" constant="30" id="7Ey-7f-KKu"/>
                 <constraint firstAttribute="trailing" secondItem="fPT-rU-Wbj" secondAttribute="trailing" constant="30" id="C1x-Cq-sdp"/>
                 <constraint firstItem="qoG-qC-o6b" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="CkS-B6-XD9"/>
-                <constraint firstItem="7MT-mx-awa" firstAttribute="top" secondItem="qoG-qC-o6b" secondAttribute="bottom" constant="78" id="Crs-Km-AIB"/>
+                <constraint firstItem="7MT-mx-awa" firstAttribute="top" secondItem="qoG-qC-o6b" secondAttribute="bottom" constant="50" id="Crs-Km-AIB"/>
                 <constraint firstAttribute="trailing" secondItem="qoG-qC-o6b" secondAttribute="trailing" id="JJE-hx-Jgu"/>
                 <constraint firstItem="qrO-Zc-51X" firstAttribute="leading" secondItem="fPT-rU-Wbj" secondAttribute="leading" id="KOV-zD-vuT"/>
-                <constraint firstItem="fPT-rU-Wbj" firstAttribute="top" secondItem="TD8-qq-8p8" secondAttribute="bottom" constant="63" id="Prz-iU-jX6"/>
+                <constraint firstItem="Qfr-ry-XHC" firstAttribute="top" secondItem="TD8-qq-8p8" secondAttribute="bottom" constant="10" id="N9Q-Ib-v2r"/>
+                <constraint firstItem="fPT-rU-Wbj" firstAttribute="top" secondItem="TD8-qq-8p8" secondAttribute="bottom" constant="50" id="Prz-iU-jX6"/>
+                <constraint firstAttribute="trailing" secondItem="Qfr-ry-XHC" secondAttribute="trailing" constant="30" id="Rdt-Ab-1lM"/>
                 <constraint firstItem="TD8-qq-8p8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="cq6-N4-lc5"/>
                 <constraint firstItem="fPT-rU-Wbj" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="kT0-Zi-67O"/>
                 <constraint firstItem="fPT-rU-Wbj" firstAttribute="trailing" secondItem="ZyF-Zt-ZMl" secondAttribute="trailing" id="lEO-mF-aSi"/>
                 <constraint firstItem="qrO-Zc-51X" firstAttribute="top" secondItem="fPT-rU-Wbj" secondAttribute="bottom" constant="18" id="lJM-r6-B4Y"/>
+                <constraint firstItem="5eZ-q8-iqJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="o2e-gJ-IDL"/>
                 <constraint firstItem="7MT-mx-awa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="p5f-rR-5J6"/>
                 <constraint firstItem="ZyF-Zt-ZMl" firstAttribute="top" secondItem="fPT-rU-Wbj" secondAttribute="bottom" constant="18" id="rjG-ix-aYp"/>
+                <constraint firstItem="5eZ-q8-iqJ" firstAttribute="top" secondItem="TD8-qq-8p8" secondAttribute="bottom" constant="10" id="uLb-ES-GwS"/>
                 <constraint firstAttribute="trailing" secondItem="TD8-qq-8p8" secondAttribute="trailing" constant="30" id="zM5-wS-3N7"/>
             </constraints>
         </view>
