宿光耀： 1.修改添加客户页面 2.添加刷新加载 3.调整输入框的frame

--- a/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZModifyPhoneVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZModifyPhoneVC.xib
@@ -72,7 +72,7 @@
                                                 <constraint firstAttribute="height" constant="30" id="wo0-rQ-QQc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                         </textField>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64T-c5-BIa" customClass="JxbScaleButton">
                                             <rect key="frame" x="506" y="15" width="75" height="25"/>
@@ -147,7 +147,7 @@
                                                 <constraint firstAttribute="height" constant="30" id="10l-cE-n1O"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认手机号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFD-yc-yXq">
                                             <rect key="frame" x="14" y="73" width="75" height="18"/>
@@ -161,7 +161,7 @@
                                                 <constraint firstAttribute="height" constant="30" id="wYX-3B-y0C"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                         </textField>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
