--- a/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalDeclarationVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalDeclarationVC.xib
@@ -37,7 +37,7 @@
                                         <constraint firstAttribute="height" constant="150" id="JQD-XD-wmX"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7PX-GB-hvQ">
                                     <rect key="frame" x="10" y="189" width="580" height="44"/>
