--- a/rufangrongke/rufangrongke/Classes/kehu/Controller/WXZAddCustomerVC.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/Controller/WXZAddCustomerVC.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZAddCustomerVC">
             <connections>
-                <outlet property="myTableView" destination="uAz-tl-ZbK" id="eJC-0h-dOD"/>
+                <outlet property="myTableView" destination="uAz-tl-ZbK" id="8jk-pM-CPp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
