--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZScreeningView.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZScreeningView.xib
@@ -8,27 +8,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZAddCustomerVC"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="WXZScreeningView">
-            <rect key="frame" x="0.0" y="0.0" width="84" height="111"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="185"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mQl-CW-uw5">
-                    <rect key="frame" x="0.0" y="8" width="84" height="103"/>
+                    <rect key="frame" x="0.0" y="13" width="140" height="171"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="mQl-CW-uw5" secondAttribute="trailing" id="1vL-dF-LZl"/>
-                <constraint firstAttribute="bottom" secondItem="mQl-CW-uw5" secondAttribute="bottom" id="GGM-cR-nGE"/>
+                <constraint firstAttribute="bottom" secondItem="mQl-CW-uw5" secondAttribute="bottom" constant="1" id="GGM-cR-nGE"/>
                 <constraint firstItem="mQl-CW-uw5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UoB-7V-y08"/>
-                <constraint firstItem="mQl-CW-uw5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="w80-CP-bn5"/>
+                <constraint firstItem="mQl-CW-uw5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="13" id="w80-CP-bn5"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="myTable" destination="mQl-CW-uw5" id="DYF-tl-Gd4"/>
             </connections>
-            <point key="canvasLocation" x="187" y="124.5"/>
+            <point key="canvasLocation" x="215" y="161.5"/>
         </view>
     </objects>
 </document>
