--- a/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalInfoVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalInfoVC.xib
@@ -34,9 +34,12 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="真实姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P95-M5-14K">
-                    <rect key="frame" x="12" y="19" width="576" height="18"/>
+                    <rect key="frame" x="12" y="13" width="576" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="6br-tf-fSi"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -156,9 +159,12 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kVw-vo-fel">
-                    <rect key="frame" x="100" y="76" width="460" height="17"/>
+                    <rect key="frame" x="100" y="69" width="460" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="9EI-6v-Exd"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="84w-HO-qMX">
                     <rect key="frame" x="0.0" y="55" width="600" height="1"/>
@@ -167,9 +173,12 @@
                     </constraints>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入当前密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NXP-W0-YDR">
-                    <rect key="frame" x="97" y="20" width="491" height="18"/>
+                    <rect key="frame" x="97" y="14" width="491" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Hrg-Lw-3ks"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="miS-na-JAw">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
